--- a/css/media.css
+++ b/css/media.css
@@ -67,8 +67,13 @@
   .get_involved_flex {
     width: 500px;
     height: 850px;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding-bottom: 20px;
+  }
+  .get_involved_cta {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
   }
   .get_involved_container {
     display: flex;
